--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e4f6cc0c",
+   "id": "9089e699",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b449fe52",
+   "execution_count": 2,
+   "id": "f4dda3c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "f591f967",
+   "execution_count": 5,
+   "id": "4dbd4519",
    "metadata": {},
    "outputs": [],
    "source": [
     "def prep_zillow(zil):\n",
     "    zil = zil.rename(columns = {'bedroomcnt': 'bedrooms', 'bathroomcnt': 'bathrooms', \n",
     "                            'calculatedfinishedsquarefeet': 'square_footage', \n",
-    "                            'taxvaluedollarcnt': 'tax_value', 'taxamount': 'tax'})\n",
-    "    zil = zil[['id', 'bedrooms', 'bathrooms', 'square_footage', 'tax_value', 'yearbuilt', \n",
+    "                            'taxvaluedollarcnt': 'tax_value', 'lotsizesquarefeet':'lot_size'})\n",
+    "    zil = zil[['id', 'bedrooms', 'bathrooms', 'square_footage', 'lot_size', 'tax_value', 'yearbuilt', \n",
     "           'tax', 'fips']]\n",
     "    # getting dataframe into the right subset\n",
     "    zil = zil.dropna()\n",
@@ -55,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "70d3d70d",
+   "execution_count": 6,
+   "id": "939a0a3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbcd0492",
+   "id": "f3ffb612",
    "metadata": {},
    "outputs": [],
    "source": []
