--- a/functions1.ipynb
+++ b/functions1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a1bdd10e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "4df29e8d",
    "metadata": {},
    "outputs": [],
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c52e3604",
+   "execution_count": null,
+   "id": "61c258e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3a781cfc",
+   "execution_count": 7,
+   "id": "6c3d1842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4030c1e8",
+   "execution_count": 8,
+   "id": "07522e5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "087ec08a",
+   "execution_count": 9,
+   "id": "3a6f9055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "94b03c09",
+   "execution_count": 11,
+   "id": "65f070c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0cd0d448",
+   "execution_count": 12,
+   "id": "3f1a0fce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5e30412c",
+   "execution_count": 14,
+   "id": "c51789fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,8 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "89db7535",
+   "execution_count": 16,
+   "id": "ed098611",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9d9cf3db",
+   "execution_count": 18,
+   "id": "9a7f3cde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,8 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "124c1f9e",
+   "execution_count": 19,
+   "id": "2f6a59cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,8 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "33328303",
+   "execution_count": 20,
+   "id": "51183ead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7641e5b4",
+   "execution_count": 22,
+   "id": "e8502890",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
     "    poly_preds = lin.predict(poly)\n",
     "    preds = pd.DataFrame({'actual':y,\n",
     "                      'baseline':y.mean(),\n",
-    "                      'poly_preds':poly_preds})\n",
+    "                      'poly_preds':poly})\n",
     "    return preds\n",
     "# running validate setup"
    ]
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2f1f4ff",
+   "id": "9f814191",
    "metadata": {},
    "outputs": [],
    "source": []
